--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
 /* Paleta de azules */
 :root {
-  --azul-claro: #7085d1;
-  --azul-intermedio: #3c57b9;
-  --azul-intenso: #284095;
-  --azul-oscuro: #232e55;
+  --azul-claro: #81c9fa;
+  --azul-intermedio: #2196f3;
+  --azul-intenso: #1465bb;
+  --azul-oscuro: #003785;
   --gris-bloqueado: #cfd8dc;
   --verde-aprobado: #a5d6a7;
   --borde-radius: 12px;
