--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
   --azul-intenso: #688391;
   --azul-oscuro: #547071;
   --gris-bloqueado: #cfd8dc;
-  --verde-aprobado: #00541d;
+  --verde-aprobado: #6fa84b;
   --borde-radius: 12px;
   --duracion-transicion: 0.25s;
 }
